<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="create_bill"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_bill_short"
        android:shortcutLongLabel="@string/shortcut_bill_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="app.lovable.c4b29d3de8d347a9bddd8699314dcb44"
            android:targetClass="app.lovable.c4b29d3de8d347a9bddd8699314dcb44.MainActivity"
            android:data="owelink://bills/new" />
    </shortcut>
    <shortcut
        android:shortcutId="create_iou"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_iou_short"
        android:shortcutLongLabel="@string/shortcut_iou_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="app.lovable.c4b29d3de8d347a9bddd8699314dcb44"
            android:targetClass="app.lovable.c4b29d3de8d347a9bddd8699314dcb44.MainActivity"
            android:data="owelink://ious/new" />
    </shortcut>
    <shortcut
        android:shortcutId="create_expense"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_expense_short"
        android:shortcutLongLabel="@string/shortcut_expense_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="app.lovable.c4b29d3de8d347a9bddd8699314dcb44"
            android:targetClass="app.lovable.c4b29d3de8d347a9bddd8699314dcb44.MainActivity"
            android:data="owelink://expenses" />
    </shortcut>
</shortcuts>
